src/rules/flake8_executable/snapshots/ruff__rules__flake8_executable__tests__EXE002_1.py.snap
---
source: src/rules/flake8_executable/mod.rs
expression: diagnostics
---
- kind:
    ShebangMissingExecutableFile: ~
  location:
    row: 1
    column: 0
  end_location:
    row: 1
    column: 0
  fix: ~
  parent: ~

