src/rules/flake8_executable/snapshots/ruff__rules__flake8_executable__tests__EXE004_1.py.snap
---
source: src/rules/flake8_executable/mod.rs
expression: diagnostics
---
- kind:
    ShebangWhitespace: ~
  location:
    row: 1
    column: 0
  end_location:
    row: 1
    column: 4
  fix:
    content: ""
    location:
      row: 1
      column: 0
    end_location:
      row: 1
      column: 4
  parent: ~
