src/rules/flake8_executable/snapshots/ruff__rules__flake8_executable__tests__EXE005_2.py.snap
---
source: src/rules/flake8_executable/mod.rs
expression: diagnostics
---
- kind:
    ShebangNewline: ~
  location:
    row: 4
    column: 2
  end_location:
    row: 4
    column: 17
  fix: ~
  parent: ~

